[gd_scene load_steps=20 format=4 uid="uid://c2ul7xcdm2fnk"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_0ab16"]
[ext_resource type="Texture2D" uid="uid://ry3ivri22pv3" path="res://Legacy-Fantasy - High Forest 2.3/Background/Background.png" id="1_6vp4h"]
[ext_resource type="Texture2D" uid="uid://cg3rmngne16my" path="res://Legacy-Fantasy - High Forest 2.3/Assets/image-removebg-preview (9).png" id="2_u4233"]
[ext_resource type="TileSet" uid="uid://bnrbx34nnxitt" path="res://Legacy-Fantasy - High Forest 2.3/Assets/Tiles.tres" id="3_k74k8"]
[ext_resource type="PackedScene" uid="uid://decchefyuynfv" path="res://Legacy-Fantasy - High Forest 2.3/Assets/npc.tscn" id="4_ted1y"]
[ext_resource type="Texture2D" uid="uid://djlh3ijvqcy5d" path="res://Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="5_tl3bn"]
[ext_resource type="Texture2D" uid="uid://cqiihfo7v3qyd" path="res://Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Fly/Fly-Sheet.png" id="6_kwqx6"]
[ext_resource type="FontFile" uid="uid://bs36f72tu4jic" path="res://Legacy-Fantasy - High Forest 2.3/Assets/Sloop-ScriptThree.ttf" id="8_ffq15"]
[ext_resource type="AudioStream" uid="uid://dunw43rpwm5y5" path="res://Music/battle-time-178551.mp3" id="9_jtcs8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0js6"]
atlas = ExtResource("5_tl3bn")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_csl2h"]
atlas = ExtResource("5_tl3bn")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mok2"]
atlas = ExtResource("5_tl3bn")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkfre"]
atlas = ExtResource("5_tl3bn")
region = Rect2(192, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_iv0uo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0js6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csl2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mok2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkfre")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yipkh"]
atlas = ExtResource("6_kwqx6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sls7"]
atlas = ExtResource("6_kwqx6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpc56"]
atlas = ExtResource("6_kwqx6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jolsu"]
atlas = ExtResource("6_kwqx6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cej7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yipkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sls7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpc56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jolsu")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0ab16")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575.75, 325.75)
scale = Vector2(2.39688, 2.38419)
texture = ExtResource("1_6vp4h")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(571, 178)
texture = ExtResource("2_u4233")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 3
visibility_layer = 3
tile_map_data = PackedByteArray("AAAAABgAAAAAAAEAAAAAABkAAAABAAMAAAABABgAAAABAAEAAAABABkAAAACAAMAAAACABgAAAACAAEAAAACABkAAAADAAMAAAAAABoAAAABAAIAAAAAABsAAAABAAMAAAABABoAAAACAAIAAAABABsAAAACAAMAAAACABoAAAADAAIAAAACABsAAAADAAMAAAAAABwAAAABAAIAAAAAAB0AAAABAAMAAAABABwAAAACAAIAAAABAB0AAAACAAMAAAACABwAAAADAAIAAAACAB0AAAADAAMAAAAAAB4AAAABAAIAAAAAAB8AAAABAAMAAAABAB4AAAACAAIAAAABAB8AAAACAAMAAAACAB4AAAADAAIAAAACAB8AAAADAAMAAAAAACAAAAABAAIAAAAAACEAAAABAAMAAAABACAAAAACAAIAAAABACEAAAACAAMAAAACACAAAAADAAIAAAACACEAAAADAAMAAAAAACIAAAABAAIAAAAAACMAAAABAAMAAAABACIAAAACAAIAAAABACMAAAACAAMAAAACACIAAAADAAIAAAACACMAAAADAAMAAAAAACQAAAABAAIAAAAAACUAAAABAAMAAAABACQAAAACAAIAAAABACUAAAACAAMAAAACACQAAAADAAIAAAACACUAAAADAAMAAAAAACYAAAABAAIAAAAAACcAAAABAAMAAAABACYAAAACAAIAAAABACcAAAACAAMAAAACACYAAAADAAIAAAACACcAAAADAAMAAAAAACgAAAABAAIAAAABACgAAAACAAIAAAACACgAAAADAAIAAAADABgAAAADAAEAAAADABkAAAABAAMAAAAEABgAAAAEAAEAAAAEABkAAAACAAMAAAADABoAAAABAAIAAAADABsAAAABAAMAAAAEABoAAAACAAIAAAAEABsAAAACAAMAAAADABwAAAABAAIAAAADAB0AAAABAAMAAAAEABwAAAACAAIAAAAEAB0AAAACAAMAAAAFAB0AAAACAAAAAAADAB4AAAABAAIAAAADAB8AAAABAAMAAAAEAB4AAAACAAIAAAAEAB8AAAACAAMAAAAFAB4AAAACAAEAAAAFAB8AAAADAAMAAAADACAAAAABAAIAAAADACEAAAABAAMAAAAEACAAAAACAAIAAAAEACEAAAACAAMAAAAFACAAAAADAAIAAAAFACEAAAADAAMAAAADACIAAAABAAIAAAADACMAAAABAAMAAAAEACIAAAACAAIAAAAEACMAAAACAAMAAAAFACIAAAADAAIAAAAFACMAAAADAAMAAAADACQAAAABAAIAAAADACUAAAABAAMAAAAEACQAAAACAAIAAAAEACUAAAACAAMAAAAFACQAAAADAAIAAAAFACUAAAADAAMAAAADACYAAAABAAIAAAADACcAAAABAAMAAAAEACYAAAACAAIAAAAEACcAAAACAAMAAAAFACYAAAADAAIAAAAFACcAAAADAAMAAAADACgAAAABAAIAAAAEACgAAAACAAIAAAAFACgAAAADAAIAAAAGAB0AAAADAAAAAAAHAB0AAAACAAAAAAAIAB0AAAADAAAAAAAGAB4AAAADAAEAAAAGAB8AAAABAAMAAAAHAB4AAAACAAEAAAAHAB8AAAACAAMAAAAIAB4AAAADAAEAAAAIAB8AAAADAAMAAAAGACAAAAABAAIAAAAGACEAAAABAAMAAAAHACAAAAACAAIAAAAHACEAAAACAAMAAAAIACAAAAADAAIAAAAIACEAAAADAAMAAAAGACIAAAABAAIAAAAGACMAAAABAAMAAAAHACIAAAACAAIAAAAHACMAAAACAAMAAAAIACIAAAADAAIAAAAIACMAAAADAAMAAAAGACQAAAABAAIAAAAGACUAAAABAAMAAAAHACQAAAACAAIAAAAHACUAAAACAAMAAAAIACQAAAADAAIAAAAIACUAAAADAAMAAAAGACYAAAABAAIAAAAGACcAAAABAAMAAAAHACYAAAACAAIAAAAHACcAAAACAAMAAAAIACYAAAADAAIAAAAIACcAAAADAAMAAAAGACgAAAABAAIAAAAHACgAAAACAAIAAAAIACgAAAADAAIAAAAJAB0AAAAEAAAAAAAJAB4AAAAEAAEAAAAJAB8AAAABAAMAAAAJACAAAAABAAIAAAAJACEAAAABAAMAAAAKACEAAAAAAAAAAAALACEAAAABAAAAAAAJACIAAAABAAIAAAAJACMAAAABAAMAAAAKACIAAAAAAAEAAAAKACMAAAACAAMAAAALACIAAAABAAEAAAALACMAAAADAAMAAAAJACQAAAABAAIAAAAJACUAAAABAAMAAAAKACQAAAACAAIAAAAKACUAAAACAAMAAAALACQAAAADAAIAAAALACUAAAADAAMAAAAJACYAAAABAAIAAAAJACcAAAABAAMAAAAKACYAAAACAAIAAAAKACcAAAACAAMAAAALACYAAAADAAIAAAALACcAAAADAAMAAAAJACgAAAABAAIAAAAKACgAAAACAAIAAAALACgAAAADAAIAAAAMACEAAAACAAAAAAANACEAAAACAAAAAAAOACEAAAADAAAAAAAMACIAAAACAAEAAAAMACMAAAABAAMAAAANACIAAAACAAEAAAANACMAAAACAAMAAAAOACIAAAADAAEAAAAOACMAAAADAAMAAAAMACQAAAABAAIAAAAMACUAAAABAAMAAAANACQAAAACAAIAAAANACUAAAACAAMAAAAOACQAAAADAAIAAAAOACUAAAADAAMAAAAMACYAAAABAAIAAAAMACcAAAABAAMAAAANACYAAAACAAIAAAANACcAAAACAAMAAAAOACYAAAADAAIAAAAOACcAAAADAAMAAAAMACgAAAABAAIAAAANACgAAAACAAIAAAAOACgAAAADAAIAAAAPACEAAAACAAAAAAAQACEAAAADAAAAAAARACEAAAAEAAAAAAAPACIAAAACAAEAAAAPACMAAAABAAMAAAAQACIAAAADAAEAAAAQACMAAAACAAMAAAARACIAAAAEAAEAAAARACMAAAADAAMAAAAPACQAAAABAAIAAAAPACUAAAABAAMAAAAQACQAAAACAAIAAAAQACUAAAACAAMAAAARACQAAAADAAIAAAARACUAAAADAAMAAAAPACYAAAABAAIAAAAPACcAAAABAAMAAAAQACYAAAACAAIAAAAQACcAAAACAAMAAAARACYAAAADAAIAAAARACcAAAADAAMAAAAPACgAAAABAAIAAAAQACgAAAACAAIAAAARACgAAAADAAIAAAA2ACEAAAAEAAAAABA3ACEAAAADAAAAABA4ACEAAAACAAAAABA2ACIAAAAEAAEAABA2ACMAAAADAAMAABA3ACIAAAADAAEAABA3ACMAAAACAAMAABA4ACIAAAACAAEAABA4ACMAAAABAAMAABA2ACQAAAADAAIAABA2ACUAAAADAAMAABA3ACQAAAACAAIAABA3ACUAAAACAAMAABA4ACQAAAABAAIAABA4ACUAAAABAAMAABA2ACYAAAADAAIAABA2ACcAAAADAAMAABA3ACYAAAACAAIAABA3ACcAAAACAAMAABA4ACYAAAABAAIAABA4ACcAAAABAAMAABA5ACEAAAADAAAAABA6ACEAAAACAAAAABA7ACEAAAACAAAAABA5ACIAAAADAAEAABA5ACMAAAADAAMAABA6ACIAAAACAAEAABA6ACMAAAACAAMAABA7ACIAAAACAAEAABA7ACMAAAABAAMAABA5ACQAAAADAAIAABA5ACUAAAADAAMAABA6ACQAAAACAAIAABA6ACUAAAACAAMAABA7ACQAAAABAAIAABA7ACUAAAABAAMAABA5ACYAAAADAAIAABA5ACcAAAADAAMAABA6ACYAAAACAAIAABA6ACcAAAACAAMAABA7ACYAAAABAAIAABA7ACcAAAABAAMAABA+AB0AAAAEAAAAABA+AB4AAAAEAAEAABA+AB8AAAABAAMAABA8ACEAAAABAAAAABA9ACEAAAAAAAAAABA+ACAAAAABAAIAABA+ACEAAAABAAMAABA8ACIAAAABAAEAABA8ACMAAAADAAMAABA9ACIAAAAAAAEAABA9ACMAAAACAAMAABA+ACIAAAABAAIAABA+ACMAAAABAAMAABA8ACQAAAADAAIAABA8ACUAAAADAAMAABA9ACQAAAACAAIAABA9ACUAAAACAAMAABA+ACQAAAABAAIAABA+ACUAAAABAAMAABA8ACYAAAADAAIAABA8ACcAAAADAAMAABA9ACYAAAACAAIAABA9ACcAAAACAAMAABA+ACYAAAABAAIAABA+ACcAAAABAAMAABA/AB0AAAADAAAAABBAAB0AAAACAAAAABBBAB0AAAADAAAAABA/AB4AAAADAAEAABA/AB8AAAADAAMAABBAAB4AAAACAAEAABBAAB8AAAACAAMAABBBAB4AAAADAAEAABBBAB8AAAABAAMAABA/ACAAAAADAAIAABA/ACEAAAADAAMAABBAACAAAAACAAIAABBAACEAAAACAAMAABBBACAAAAABAAIAABBBACEAAAABAAMAABA/ACIAAAADAAIAABA/ACMAAAADAAMAABBAACIAAAACAAIAABBAACMAAAACAAMAABBBACIAAAABAAIAABBBACMAAAABAAMAABA/ACQAAAADAAIAABA/ACUAAAADAAMAABBAACQAAAACAAIAABBAACUAAAACAAMAABBBACQAAAABAAIAABBBACUAAAABAAMAABA/ACYAAAADAAIAABA/ACcAAAADAAMAABBAACYAAAACAAIAABBAACcAAAACAAMAABBBACYAAAABAAIAABBBACcAAAABAAMAABBDABgAAAAEAAEAABBDABkAAAACAAMAABBEABgAAAADAAEAABBEABkAAAABAAMAABBDABoAAAACAAIAABBDABsAAAACAAMAABBEABoAAAABAAIAABBEABsAAAABAAMAABBCAB0AAAACAAAAABBDABwAAAACAAIAABBDAB0AAAACAAMAABBEABwAAAABAAIAABBEAB0AAAABAAMAABBCAB4AAAACAAEAABBCAB8AAAADAAMAABBDAB4AAAACAAIAABBDAB8AAAACAAMAABBEAB4AAAABAAIAABBEAB8AAAABAAMAABBCACAAAAADAAIAABBCACEAAAADAAMAABBDACAAAAACAAIAABBDACEAAAACAAMAABBEACAAAAABAAIAABBEACEAAAABAAMAABBCACIAAAADAAIAABBCACMAAAADAAMAABBDACIAAAACAAIAABBDACMAAAACAAMAABBEACIAAAABAAIAABBEACMAAAABAAMAABBCACQAAAADAAIAABBCACUAAAADAAMAABBDACQAAAACAAIAABBDACUAAAACAAMAABBEACQAAAABAAIAABBEACUAAAABAAMAABBCACYAAAADAAIAABBCACcAAAADAAMAABBDACYAAAACAAIAABBDACcAAAACAAMAABBEACYAAAABAAIAABBEACcAAAABAAMAABBFABgAAAACAAEAABBFABkAAAADAAMAABBGABgAAAABAAEAABBGABkAAAACAAMAABBHABgAAAAAAAEAABBHABkAAAABAAMAABBFABoAAAADAAIAABBFABsAAAADAAMAABBGABoAAAACAAIAABBGABsAAAACAAMAABBHABoAAAABAAIAABBHABsAAAABAAMAABBFABwAAAADAAIAABBFAB0AAAADAAMAABBGABwAAAACAAIAABBGAB0AAAACAAMAABBHABwAAAABAAIAABBHAB0AAAABAAMAABBFAB4AAAADAAIAABBFAB8AAAADAAMAABBGAB4AAAACAAIAABBGAB8AAAACAAMAABBHAB4AAAABAAIAABBHAB8AAAABAAMAABBFACAAAAADAAIAABBFACEAAAADAAMAABBGACAAAAACAAIAABBGACEAAAACAAMAABBHACAAAAABAAIAABBHACEAAAABAAMAABBFACIAAAADAAIAABBFACMAAAADAAMAABBGACIAAAACAAIAABBGACMAAAACAAMAABBHACIAAAABAAIAABBHACMAAAABAAMAABBFACQAAAADAAIAABBFACUAAAADAAMAABBGACQAAAACAAIAABBGACUAAAACAAMAABBHACQAAAABAAIAABBHACUAAAABAAMAABBFACYAAAADAAIAABBFACcAAAADAAMAABBGACYAAAACAAIAABBGACcAAAACAAMAABBHACYAAAABAAIAABBHACcAAAABAAMAABA2ACgAAAADAAIAABA3ACgAAAACAAIAABA4ACgAAAABAAIAABA5ACgAAAADAAIAABA6ACgAAAACAAIAABA7ACgAAAABAAIAABA8ACgAAAADAAIAABA9ACgAAAACAAIAABA+ACgAAAABAAIAABA/ACgAAAADAAIAABBAACgAAAACAAIAABBBACgAAAABAAIAABBCACgAAAADAAIAABBDACgAAAACAAIAABBEACgAAAABAAIAABBFACgAAAADAAIAABBGACgAAAACAAIAABBHACgAAAABAAIAABAAABcAAAAAAAAAAAABABcAAAABAAAAAAACABcAAAACAAAAAAADABcAAAADAAAAAAAEABcAAAAEAAAAAABHABcAAAAAAAAAABBGABcAAAABAAAAABBFABcAAAACAAAAABBEABcAAAADAAAAABBDABcAAAAEAAAAABA=")
tile_set = ExtResource("3_k74k8")
use_kinematic_bodies = true

[node name="NPC" parent="." instance=ExtResource("4_ted1y")]
position = Vector2(66, -37)

[node name="ProtagSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(113, 445)
scale = Vector2(1.35938, 1.5)
sprite_frames = SubResource("SpriteFrames_iv0uo")
autoplay = "default"

[node name="BeeSprite2" type="AnimatedSprite2D" parent="."]
position = Vector2(1017, 423)
scale = Vector2(2.00403, 1.9259)
sprite_frames = SubResource("SpriteFrames_cej7o")
autoplay = "default"

[node name="BeeSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(895, 519)
scale = Vector2(1.26563, 1.26563)
sprite_frames = SubResource("SpriteFrames_cej7o")
autoplay = "default"

[node name="BeeSprite3" type="AnimatedSprite2D" parent="."]
position = Vector2(957, 490)
scale = Vector2(1.26563, 1.26563)
sprite_frames = SubResource("SpriteFrames_cej7o")
autoplay = "default"

[node name="BeeSprite4" type="AnimatedSprite2D" parent="."]
position = Vector2(917, 435)
scale = Vector2(1.26563, 1.26563)
sprite_frames = SubResource("SpriteFrames_cej7o")
autoplay = "default"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NotHidden" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGame" type="Button" parent="Control/NotHidden"]
layout_mode = 0
offset_left = 428.0
offset_top = 383.0
offset_right = 720.0
offset_bottom = 469.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 69
text = "Start Game"

[node name="LvlSelect" type="Button" parent="Control/NotHidden"]
layout_mode = 0
offset_left = 356.0
offset_top = 496.0
offset_right = 803.0
offset_bottom = 583.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 69
text = "Level Select  "

[node name="Hidden" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lvl1" type="Button" parent="Control/Hidden"]
visible = false
layout_mode = 0
offset_left = 102.0
offset_top = 158.0
offset_right = 366.0
offset_bottom = 246.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 69
text = "Level 1"

[node name="Lvl2" type="Button" parent="Control/Hidden"]
visible = false
layout_mode = 0
offset_left = 442.0
offset_top = 158.0
offset_right = 699.0
offset_bottom = 244.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 69
text = "Level 2"

[node name="Lvl3" type="Button" parent="Control/Hidden"]
visible = false
layout_mode = 0
offset_left = 780.0
offset_top = 156.0
offset_right = 1036.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 69
text = "Level 3"

[node name="Back" type="Button" parent="Control/Hidden"]
layout_mode = 0
offset_left = 411.0
offset_top = 416.0
offset_right = 717.0
offset_bottom = 498.0
theme_override_fonts/font = ExtResource("8_ffq15")
theme_override_font_sizes/font_size = 65
text = "Main Menu"

[node name="Lv1Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jtcs8")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Control/NotHidden/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Control/NotHidden/LvlSelect" to="." method="_on_lvl_select_pressed"]
[connection signal="pressed" from="Control/Hidden/Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Control/Hidden/Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Control/Hidden/Lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Control/Hidden/Back" to="." method="_on_back_pressed"]
